prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__append_select_multiple_with_null.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from invoices\nselect { customer_id, invoice_id, billing_country }\ntake 5\nappend (\n  from employees\n  select { employee_id, employee_id, country }\n  take 5\n)\nappend (\n  from invoice_items\n  select { invoice_line_id, invoice_id, null }\n  take 5\n)\nselect { billing_country, invoice_id }\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_multiple_with_null.prql
---
frames:
- - 1:14-65
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 54
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 55
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 56
      target_name: null
    inputs:
    - id: 53
      name: invoices
      table:
      - default_db
      - invoices
- - 1:66-72
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 54
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 55
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 56
      target_name: null
    inputs:
    - id: 53
      name: invoices
      table:
      - default_db
      - invoices
- - 1:101-145
  - columns:
    - !Single
      name: null
      target_id: 37
      target_name: null
    - !Single
      name:
      - employees
      - employee_id
      target_id: 38
      target_name: null
    - !Single
      name:
      - employees
      - country
      target_id: 39
      target_name: null
    inputs:
    - id: 36
      name: employees
      table:
      - default_db
      - employees
- - 1:148-154
  - columns:
    - !Single
      name: null
      target_id: 37
      target_name: null
    - !Single
      name:
      - employees
      - employee_id
      target_id: 38
      target_name: null
    - !Single
      name:
      - employees
      - country
      target_id: 39
      target_name: null
    inputs:
    - id: 36
      name: employees
      table:
      - default_db
      - employees
- - 1:73-156
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 54
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 55
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 56
      target_name: null
    inputs:
    - id: 53
      name: invoices
      table:
      - default_db
      - invoices
    - id: 36
      name: employees
      table:
      - default_db
      - employees
- - 1:189-233
  - columns:
    - !Single
      name:
      - invoice_items
      - invoice_line_id
      target_id: 17
      target_name: null
    - !Single
      name:
      - invoice_items
      - invoice_id
      target_id: 18
      target_name: null
    - !Single
      name: null
      target_id: 19
      target_name: null
    inputs:
    - id: 16
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:236-242
  - columns:
    - !Single
      name:
      - invoice_items
      - invoice_line_id
      target_id: 17
      target_name: null
    - !Single
      name:
      - invoice_items
      - invoice_id
      target_id: 18
      target_name: null
    - !Single
      name: null
      target_id: 19
      target_name: null
    inputs:
    - id: 16
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:157-244
  - columns:
    - !Single
      name:
      - invoices
      - customer_id
      target_id: 54
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 55
      target_name: null
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 56
      target_name: null
    inputs:
    - id: 53
      name: invoices
      table:
      - default_db
      - invoices
    - id: 36
      name: employees
      table:
      - default_db
      - employees
    - id: 16
      name: invoice_items
      table:
      - default_db
      - invoice_items
- - 1:245-283
  - columns:
    - !Single
      name:
      - invoices
      - billing_country
      target_id: 64
      target_name: null
    - !Single
      name:
      - invoices
      - invoice_id
      target_id: 65
      target_name: null
    inputs:
    - id: 53
      name: invoices
      table:
      - default_db
      - invoices
    - id: 36
      name: employees
      table:
      - default_db
      - employees
    - id: 16
      name: invoice_items
      table:
      - default_db
      - invoice_items
nodes:
- id: 16
  kind: Ident
  span: 1:168-186
  ident: !Ident
  - default_db
  - invoice_items
  parent: 21
- id: 17
  kind: Ident
  span: 1:198-213
  ident: !Ident
  - this
  - invoice_items
  - invoice_line_id
  targets:
  - 16
  parent: 20
- id: 18
  kind: Ident
  span: 1:215-225
  ident: !Ident
  - this
  - invoice_items
  - invoice_id
  targets:
  - 16
  parent: 20
- id: 19
  kind: Literal
  span: 1:227-231
  parent: 20
- id: 20
  kind: Tuple
  span: 1:196-233
  children:
  - 17
  - 18
  - 19
  parent: 21
- id: 21
  kind: 'TransformCall: Select'
  span: 1:189-233
  children:
  - 16
  - 20
  parent: 23
- id: 23
  kind: 'TransformCall: Take'
  span: 1:236-242
  children:
  - 21
  - 24
  parent: 63
- id: 24
  kind: Literal
  parent: 23
- id: 36
  kind: Ident
  span: 1:84-98
  ident: !Ident
  - default_db
  - employees
  parent: 41
- id: 37
  kind: Ident
  span: 1:110-121
  ident: !Ident
  - this
  - employees
  - employee_id
  targets:
  - 36
  parent: 40
- id: 38
  kind: Ident
  span: 1:123-134
  ident: !Ident
  - this
  - employees
  - employee_id
  targets:
  - 36
  parent: 40
- id: 39
  kind: Ident
  span: 1:136-143
  ident: !Ident
  - this
  - employees
  - country
  targets:
  - 36
  parent: 40
- id: 40
  kind: Tuple
  span: 1:108-145
  children:
  - 37
  - 38
  - 39
  parent: 41
- id: 41
  kind: 'TransformCall: Select'
  span: 1:101-145
  children:
  - 36
  - 40
  parent: 43
- id: 43
  kind: 'TransformCall: Take'
  span: 1:148-154
  children:
  - 41
  - 44
  parent: 62
- id: 44
  kind: Literal
  parent: 43
- id: 53
  kind: Ident
  span: 1:0-13
  ident: !Ident
  - default_db
  - invoices
  parent: 58
- id: 54
  kind: Ident
  span: 1:23-34
  ident: !Ident
  - this
  - invoices
  - customer_id
  targets:
  - 53
  parent: 57
- id: 55
  kind: Ident
  span: 1:36-46
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 53
  parent: 57
- id: 56
  kind: Ident
  span: 1:48-63
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 53
  parent: 57
- id: 57
  kind: Tuple
  span: 1:21-65
  children:
  - 54
  - 55
  - 56
  parent: 58
- id: 58
  kind: 'TransformCall: Select'
  span: 1:14-65
  children:
  - 53
  - 57
  parent: 60
- id: 60
  kind: 'TransformCall: Take'
  span: 1:66-72
  children:
  - 58
  - 61
  parent: 62
- id: 61
  kind: Literal
  parent: 60
- id: 62
  kind: 'TransformCall: Append'
  span: 1:73-156
  children:
  - 60
  - 43
  parent: 63
- id: 63
  kind: 'TransformCall: Append'
  span: 1:157-244
  children:
  - 62
  - 23
  parent: 67
- id: 64
  kind: Ident
  span: 1:254-269
  ident: !Ident
  - this
  - invoices
  - billing_country
  targets:
  - 56
  parent: 66
- id: 65
  kind: Ident
  span: 1:271-281
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 55
  parent: 66
- id: 66
  kind: Tuple
  span: 1:252-283
  children:
  - 64
  - 65
  parent: 67
- id: 67
  kind: 'TransformCall: Select'
  span: 1:245-283
  children:
  - 63
  - 66
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Ident:
                - invoices
                span: 1:5-13
            span: 1:0-13
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:14-20
              args:
              - Tuple:
                - Ident:
                  - customer_id
                  span: 1:23-34
                - Ident:
                  - invoice_id
                  span: 1:36-46
                - Ident:
                  - billing_country
                  span: 1:48-63
                span: 1:21-65
            span: 1:14-65
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:66-70
              args:
              - Literal:
                  Integer: 5
                span: 1:71-72
            span: 1:66-72
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:73-79
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:84-88
                      args:
                      - Ident:
                        - employees
                        span: 1:89-98
                    span: 1:84-98
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:101-107
                      args:
                      - Tuple:
                        - Ident:
                          - employee_id
                          span: 1:110-121
                        - Ident:
                          - employee_id
                          span: 1:123-134
                        - Ident:
                          - country
                          span: 1:136-143
                        span: 1:108-145
                    span: 1:101-145
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:148-152
                      args:
                      - Literal:
                          Integer: 5
                        span: 1:153-154
                    span: 1:148-154
                span: 1:84-154
            span: 1:73-156
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:157-163
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:168-172
                      args:
                      - Ident:
                        - invoice_items
                        span: 1:173-186
                    span: 1:168-186
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:189-195
                      args:
                      - Tuple:
                        - Ident:
                          - invoice_line_id
                          span: 1:198-213
                        - Ident:
                          - invoice_id
                          span: 1:215-225
                        - Literal: 'Null'
                          span: 1:227-231
                        span: 1:196-233
                    span: 1:189-233
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:236-240
                      args:
                      - Literal:
                          Integer: 5
                        span: 1:241-242
                    span: 1:236-242
                span: 1:168-242
            span: 1:157-244
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:245-251
              args:
              - Tuple:
                - Ident:
                  - billing_country
                  span: 1:254-269
                - Ident:
                  - invoice_id
                  span: 1:271-281
                span: 1:252-283
            span: 1:245-283
        span: 1:0-283
    span: 1:0-283
