prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__append_select_nulls.longform.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# duckdb:skip\n# postgres:skip\n\nfrom invoices\nselect {an_id = invoice_id, name = null}\ntake 2\nappend (\n  from employees\n  select {an_id = null, name = first_name}\n  take 2\n)\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_nulls.longform.prql
---
frames:
- - 1:45-85
  - columns:
    - !Single
      name:
      - an_id
      target_id: 140
      target_name: null
    - !Single
      name:
      - name
      target_id: 141
      target_name: null
    inputs:
    - id: 138
      name: invoices
      table:
      - default_db
      - invoices
- - 1:86-92
  - columns:
    - !Single
      name:
      - an_id
      target_id: 140
      target_name: null
    - !Single
      name:
      - name
      target_id: 141
      target_name: null
    inputs:
    - id: 138
      name: invoices
      table:
      - default_db
      - invoices
- - 1:121-161
  - columns:
    - !Single
      name:
      - an_id
      target_id: 123
      target_name: null
    - !Single
      name:
      - name
      target_id: 124
      target_name: null
    inputs:
    - id: 121
      name: employees
      table:
      - default_db
      - employees
- - 1:164-170
  - columns:
    - !Single
      name:
      - an_id
      target_id: 123
      target_name: null
    - !Single
      name:
      - name
      target_id: 124
      target_name: null
    inputs:
    - id: 121
      name: employees
      table:
      - default_db
      - employees
- - 1:93-172
  - columns:
    - !Single
      name:
      - an_id
      target_id: 140
      target_name: null
    - !Single
      name:
      - name
      target_id: 141
      target_name: null
    inputs:
    - id: 138
      name: invoices
      table:
      - default_db
      - invoices
nodes:
- id: 121
  kind: Ident
  span: 1:104-118
  ident: !Ident
  - default_db
  - employees
  parent: 126
- id: 123
  kind: Literal
  span: 1:137-141
  alias: an_id
  parent: 125
- id: 124
  kind: Ident
  span: 1:150-160
  alias: name
  ident: !Ident
  - this
  - employees
  - first_name
  targets:
  - 121
  parent: 125
- id: 125
  kind: Tuple
  span: 1:128-161
  children:
  - 123
  - 124
  parent: 126
- id: 126
  kind: 'TransformCall: Select'
  span: 1:121-161
  children:
  - 121
  - 125
  parent: 128
- id: 128
  kind: 'TransformCall: Take'
  span: 1:164-170
  children:
  - 126
  - 129
  parent: 147
- id: 129
  kind: Literal
  parent: 128
- id: 138
  kind: Ident
  span: 1:31-44
  ident: !Ident
  - default_db
  - invoices
  parent: 143
- id: 140
  kind: Ident
  span: 1:61-71
  alias: an_id
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 138
  parent: 142
- id: 141
  kind: Literal
  span: 1:80-84
  alias: name
  parent: 142
- id: 142
  kind: Tuple
  span: 1:52-85
  children:
  - 140
  - 141
  parent: 143
- id: 143
  kind: 'TransformCall: Select'
  span: 1:45-85
  children:
  - 138
  - 142
  parent: 145
- id: 145
  kind: 'TransformCall: Take'
  span: 1:86-92
  children:
  - 143
  - 146
  parent: 147
- id: 146
  kind: Literal
  parent: 145
- id: 147
  kind: 'TransformCall: Append'
  span: 1:93-172
  children:
  - 145
  - 128
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:31-35
              args:
              - Ident:
                - invoices
                span: 1:36-44
            span: 1:31-44
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:45-51
              args:
              - Tuple:
                - Ident:
                  - invoice_id
                  span: 1:61-71
                  alias: an_id
                - Literal: 'Null'
                  span: 1:80-84
                  alias: name
                span: 1:52-85
            span: 1:45-85
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:86-90
              args:
              - Literal:
                  Integer: 2
                span: 1:91-92
            span: 1:86-92
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:93-99
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:104-108
                      args:
                      - Ident:
                        - employees
                        span: 1:109-118
                    span: 1:104-118
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:121-127
                      args:
                      - Tuple:
                        - Literal: 'Null'
                          span: 1:137-141
                          alias: an_id
                        - Ident:
                          - first_name
                          span: 1:150-160
                          alias: name
                        span: 1:128-161
                    span: 1:121-161
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:164-168
                      args:
                      - Literal:
                          Integer: 2
                        span: 1:169-170
                    span: 1:164-170
                span: 1:104-170
            span: 1:93-172
        span: 1:31-172
    span: 1:0-172
