prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__append_select_nulls.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from invoices\nselect {an_id = invoice_id, name = null}\ntake 2\nappend (\n  from employees\n  select {an_id = null, name = first_name}\n  take 2\n)\n"
input_file: prqlc/prqlc/tests/integration/queries/append_select_nulls.prql
---
frames:
- - 1:14-54
  - columns:
    - !Single
      name:
      - an_id
      target_id: 30
      target_name: null
    - !Single
      name:
      - name
      target_id: 31
      target_name: null
    inputs:
    - id: 29
      name: invoices
      table:
      - default_db
      - invoices
- - 1:55-61
  - columns:
    - !Single
      name:
      - an_id
      target_id: 30
      target_name: null
    - !Single
      name:
      - name
      target_id: 31
      target_name: null
    inputs:
    - id: 29
      name: invoices
      table:
      - default_db
      - invoices
- - 1:90-130
  - columns:
    - !Single
      name:
      - an_id
      target_id: 14
      target_name: null
    - !Single
      name:
      - name
      target_id: 15
      target_name: null
    inputs:
    - id: 13
      name: employees
      table:
      - default_db
      - employees
- - 1:133-139
  - columns:
    - !Single
      name:
      - an_id
      target_id: 14
      target_name: null
    - !Single
      name:
      - name
      target_id: 15
      target_name: null
    inputs:
    - id: 13
      name: employees
      table:
      - default_db
      - employees
- - 1:62-141
  - columns:
    - !Single
      name:
      - an_id
      target_id: 30
      target_name: null
    - !Single
      name:
      - name
      target_id: 31
      target_name: null
    inputs:
    - id: 29
      name: invoices
      table:
      - default_db
      - invoices
    - id: 13
      name: employees
      table:
      - default_db
      - employees
nodes:
- id: 13
  kind: Ident
  span: 1:73-87
  ident: !Ident
  - default_db
  - employees
  parent: 17
- id: 14
  kind: Literal
  span: 1:106-110
  alias: an_id
  parent: 16
- id: 15
  kind: Ident
  span: 1:119-129
  alias: name
  ident: !Ident
  - this
  - employees
  - first_name
  targets:
  - 13
  parent: 16
- id: 16
  kind: Tuple
  span: 1:97-130
  children:
  - 14
  - 15
  parent: 17
- id: 17
  kind: 'TransformCall: Select'
  span: 1:90-130
  children:
  - 13
  - 16
  parent: 19
- id: 19
  kind: 'TransformCall: Take'
  span: 1:133-139
  children:
  - 17
  - 20
  parent: 37
- id: 20
  kind: Literal
  parent: 19
- id: 29
  kind: Ident
  span: 1:0-13
  ident: !Ident
  - default_db
  - invoices
  parent: 33
- id: 30
  kind: Ident
  span: 1:30-40
  alias: an_id
  ident: !Ident
  - this
  - invoices
  - invoice_id
  targets:
  - 29
  parent: 32
- id: 31
  kind: Literal
  span: 1:49-53
  alias: name
  parent: 32
- id: 32
  kind: Tuple
  span: 1:21-54
  children:
  - 30
  - 31
  parent: 33
- id: 33
  kind: 'TransformCall: Select'
  span: 1:14-54
  children:
  - 29
  - 32
  parent: 35
- id: 35
  kind: 'TransformCall: Take'
  span: 1:55-61
  children:
  - 33
  - 36
  parent: 37
- id: 36
  kind: Literal
  parent: 35
- id: 37
  kind: 'TransformCall: Append'
  span: 1:62-141
  children:
  - 35
  - 19
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:0-4
              args:
              - Ident:
                - invoices
                span: 1:5-13
            span: 1:0-13
          - FuncCall:
              name:
                Ident:
                - select
                span: 1:14-20
              args:
              - Tuple:
                - Ident:
                  - invoice_id
                  span: 1:30-40
                  alias: an_id
                - Literal: 'Null'
                  span: 1:49-53
                  alias: name
                span: 1:21-54
            span: 1:14-54
          - FuncCall:
              name:
                Ident:
                - take
                span: 1:55-59
              args:
              - Literal:
                  Integer: 2
                span: 1:60-61
            span: 1:55-61
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:62-68
              args:
              - Pipeline:
                  exprs:
                  - FuncCall:
                      name:
                        Ident:
                        - from
                        span: 1:73-77
                      args:
                      - Ident:
                        - employees
                        span: 1:78-87
                    span: 1:73-87
                  - FuncCall:
                      name:
                        Ident:
                        - select
                        span: 1:90-96
                      args:
                      - Tuple:
                        - Literal: 'Null'
                          span: 1:106-110
                          alias: an_id
                        - Ident:
                          - first_name
                          span: 1:119-129
                          alias: name
                        span: 1:97-130
                    span: 1:90-130
                  - FuncCall:
                      name:
                        Ident:
                        - take
                        span: 1:133-137
                      args:
                      - Literal:
                          Integer: 2
                        span: 1:138-139
                    span: 1:133-139
                span: 1:73-139
            span: 1:62-141
        span: 1:0-141
    span: 1:0-141
