prqlc/prqlc/tests/integration/snapshots/integration__queries__debug_lineage__read_csv.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# sqlite:skip\n# postgres:skip\n# mysql:skip\nfrom (read_csv \"data_file_root/media_types.csv\")\nappend (read_json \"data_file_root/media_types.json\")\nsort media_type_id\n"
input_file: prqlc/prqlc/tests/integration/queries/read_csv.prql
---
frames:
- - 1:92-144
  - columns:
    - !All
      input_id: 13
      except: []
    inputs:
    - id: 13
      name: _literal_13
      table:
      - default_db
      - _literal_13
    - id: 8
      name: _literal_8
      table:
      - default_db
      - _literal_8
- - 1:145-163
  - columns:
    - !All
      input_id: 13
      except: []
    inputs:
    - id: 13
      name: _literal_13
      table:
      - default_db
      - _literal_13
    - id: 8
      name: _literal_8
      table:
      - default_db
      - _literal_8
nodes:
- id: 8
  kind: RqOperator
  span: 1:100-143
  targets:
  - 10
  parent: 16
- id: 10
  kind: Literal
  span: 1:110-143
- id: 13
  kind: RqOperator
  span: 1:43-91
  targets:
  - 15
  parent: 16
- id: 15
  kind: Literal
  span: 1:58-90
- id: 16
  kind: 'TransformCall: Append'
  span: 1:92-144
  children:
  - 13
  - 8
  parent: 19
- id: 17
  kind: Ident
  span: 1:150-163
  ident: !Ident
  - this
  - _literal_13
  - media_type_id
  targets:
  - 13
  parent: 19
- id: 19
  kind: 'TransformCall: Sort'
  span: 1:145-163
  children:
  - 16
  - 17
ast:
  name: Project
  stmts:
  - VarDef:
      kind: Main
      name: main
      value:
        Pipeline:
          exprs:
          - FuncCall:
              name:
                Ident:
                - from
                span: 1:43-47
              args:
              - FuncCall:
                  name:
                    Ident:
                    - read_csv
                    span: 1:49-57
                  args:
                  - Literal:
                      String: data_file_root/media_types.csv
                    span: 1:58-90
                span: 1:49-90
            span: 1:43-91
          - FuncCall:
              name:
                Ident:
                - append
                span: 1:92-98
              args:
              - FuncCall:
                  name:
                    Ident:
                    - read_json
                    span: 1:100-109
                  args:
                  - Literal:
                      String: data_file_root/media_types.json
                    span: 1:110-143
                span: 1:100-143
            span: 1:92-144
          - FuncCall:
              name:
                Ident:
                - sort
                span: 1:145-149
              args:
              - Ident:
                - media_type_id
                span: 1:150-163
            span: 1:145-163
        span: 1:43-163
    span: 1:0-163
